# TRIAD-6

./: CMakeLists.txt  LICENSE  README.md
include/: application.hpp  bct.hpp  bvs1.hpp  cpu.hpp  machine.hpp  renderer_type.hpp  utility.hpp
include/opengl21/: renderer.hpp  renderer_error.hpp  shaders.hpp
include/opengles3/: renderer.hpp  renderer_error.hpp  shaders.hpp
src/: bvs1.cpp  machine.cpp  main.cpp
src/opengl21/: renderer.cpp
src/opengles3/: renderer.cpp
